@@ -1,0 +1,2 @@
+#!/bin/sh
+xsltproc plotdict.xml > plotdictionary.html
